[package]
name = "libzip-sys"
version = "0.1.6"
authors = ["Dicomserver Team"]
edition = "2021"
description = "Bindgen bindings to system libzip"
build = "build.rs"
links = "zip"

[dependencies]
libz-sys = { version = "1", default-features = false, optional = true }
openssl-sys = { version = "0.9", optional = true }
tokio = { version = "1", default-features = false }

[build-dependencies]
bindgen = "*"
cmake = "0.1"

[features]
default = ["static"]
static = ["openssl-sys/vendored", "libz-sys/zlib-ng"]
