[package]
name = "libzip-sys"
version = "0.1.6"
authors = ["Dicomserver Team"]
edition = "2021"
description = "Bindgen bindings to system libzip"
build = "build.rs"
links = "zip"

[dependencies]
tokio = { version = "1", optional = true, default-features = false }

[build-dependencies]
bindgen = "*"
cmake = "0.1"
vcpkg = "0.2.15"

[features]
default = ["static"]
static = []
tokio = ["dep:tokio"]

[target.'cfg(target_os = "linux")'.dependencies]
libz-sys = { version = "1.1.14", default-features = false, optional= false, features = ["zlib-ng"] }
openssl-sys = { version = "0.9.98", optional = false }
